[gd_scene load_steps=5 format=3 uid="uid://dymspuwi7oanj"]

[ext_resource type="Script" path="res://Buildings.gd" id="1_dljpk"]
[ext_resource type="PackedScene" uid="uid://csbumgvwfu0t4" path="res://building.tscn" id="1_ecxvq"]
[ext_resource type="Script" path="res://game_scene.gd" id="1_evsxu"]
[ext_resource type="Texture2D" uid="uid://83jg3j6lmqah" path="res://assets/monk.png" id="4_pdc83"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_evsxu")

[node name="Buildings" type="Node2D" parent="."]
script = ExtResource("1_dljpk")

[node name="Brewery" parent="Buildings" instance=ExtResource("1_ecxvq")]
position = Vector2(329, 103)
resource = "Beer"

[node name="Skriptorium" parent="Buildings" instance=ExtResource("1_ecxvq")]
position = Vector2(322, 498)
resource = "Knowledge"

[node name="Field" parent="Buildings" instance=ExtResource("1_ecxvq")]
position = Vector2(541, 293)
resource = "Food"

[node name="Church" parent="Buildings" instance=ExtResource("1_ecxvq")]
position = Vector2(106, 299)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer"]
layout_mode = 2

[node name="Faith" type="MarginContainer" parent="UI/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="UI/Panel/MarginContainer/HBoxContainer/Faith"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="UI/Panel/MarginContainer/HBoxContainer/Faith"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_pdc83")
expand_mode = 2
stretch_mode = 4

[node name="VSeparator5" type="VSeparator" parent="UI/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Beer" type="MarginContainer" parent="UI/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="UI/Panel/MarginContainer/HBoxContainer/Beer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="UI/Panel/MarginContainer/HBoxContainer/Beer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_pdc83")
expand_mode = 2
stretch_mode = 4

[node name="VSeparator4" type="VSeparator" parent="UI/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Food" type="MarginContainer" parent="UI/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="UI/Panel/MarginContainer/HBoxContainer/Food"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="UI/Panel/MarginContainer/HBoxContainer/Food"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_pdc83")
expand_mode = 2
stretch_mode = 4

[node name="VSeparator3" type="VSeparator" parent="UI/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Knowledge" type="MarginContainer" parent="UI/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="UI/Panel/MarginContainer/HBoxContainer/Knowledge"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="UI/Panel/MarginContainer/HBoxContainer/Knowledge"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_pdc83")
expand_mode = 2
stretch_mode = 4

[node name="VSeparator2" type="VSeparator" parent="UI/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Monks" type="MarginContainer" parent="UI/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer/HBoxContainer/Monks"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Panel/MarginContainer/HBoxContainer/Monks/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_pdc83")
expand_mode = 2
stretch_mode = 4

[node name="MonkLable" type="Label" parent="UI/Panel/MarginContainer/HBoxContainer/Monks/HBoxContainer"]
layout_mode = 2
text = "8"

[node name="VSeparator" type="VSeparator" parent="UI/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Spirits" type="MarginContainer" parent="UI/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer/HBoxContainer/Spirits"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Panel/MarginContainer/HBoxContainer/Spirits/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_pdc83")
expand_mode = 2
stretch_mode = 4

[node name="SpiritLable" type="Label" parent="UI/Panel/MarginContainer/HBoxContainer/Spirits/HBoxContainer"]
layout_mode = 2
text = "8"

[connection signal="newBuildingSelected" from="Buildings/Brewery" to="Buildings" method="_on_brewery_new_building_selected"]
[connection signal="newBuildingSelected" from="Buildings/Skriptorium" to="Buildings" method="_on_skriptorium_new_building_selected"]
[connection signal="newBuildingSelected" from="Buildings/Field" to="Buildings" method="_on_field_new_building_selected"]
[connection signal="newBuildingSelected" from="Buildings/Church" to="Buildings" method="_on_church_new_building_selected"]
